Ads more line breaks for readability.

--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -66,24 +66,41 @@
                         {{ macros.share(self.title(), true) }}
                     </div>
                     
-                    <section class="content_block content_block__padded-top content_block__padded-bottom content_block__border-top u-hide-on-mobile">
+                    <section class="content_block
+                                    content_block__padded-top
+                                    content_block__padded-bottom
+                                    content_block__border-top u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
-                                    <div class="media_image-container media_image-container__wide-margin">
+                                    <div class="media_image-container
+                                                media_image-container__wide-margin">
                                         <img src="antonakes_round_90.jpg" alt="" width="60">
                                     </div>
                                     <div class="media_body">
-                                        <h1 class="h4">Downloads</h1>
-                                            <a href="/newsroom/press-resources/201405_cfpb_photo_steve-antonakes_high-res.jpg" class="jump-link jump-link__download">High-res photo</a>
-                                            <a href="#" class="jump-link jump-link__download">Biography</a>
+                                        <h1 class="h4">
+                                            Downloads
+                                        </h1>
+                                        <a class="jump-link jump-link__download"
+                                           href="/newsroom/press-resources/201405_cfpb_photo_steve-antonakes_high-res.jpg">
+                                            High-res photo
+                                        </a>
+                                        <a class="jump-link jump-link__download"
+                                           href="#">
+                                            Biography
+                                        </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                <h1 class="h4">Request speaking info</h1>
+                            <div class="content-l_col
+                                        content-l_col-1-2
+                                        content-l_col__before-divider">
+                                <h1 class="h4">
+                                    Request speaking info
+                                </h1>
                                 <span class="cf-icon cf-icon-email"></span>
-                                <a class="styled-link" href="mailto:externalaffairs@cfpb.gov">
+                                <a class="styled-link"
+                                   href="mailto:externalaffairs@cfpb.gov">
                                     externalaffairs@cfpb.gov
                                 </a>
                             </div>
@@ -92,7 +109,9 @@
                     
                     <aside>
 
-                        <section class="content_block content_block__padded-top content_block__border-top">
+                        <section class="content_block
+                                        content_block__padded-top
+                                        content_block__border-top">
                             <h1 class="content_title__large">
                                 More information about Steve Antonakes
                             </h1>
@@ -102,8 +121,11 @@
                                         <span class="cf-icon cf-icon-newspaper"></span>
                                         Newsroom
                                     </h2>
-                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="/newsroom/?filter_author=Steve+Antonakes" class="jump-link">
+                                    <p class="short-desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                                    </p>
+                                    <a class="jump-link"
+                                       href="/newsroom/?filter_author=Steve+Antonakes">
                                         Read news about the deputy director
                                     </a>
                                 </div>
@@ -112,8 +134,11 @@
                                         <span class="cf-icon cf-icon-newspaper"></span>
                                         Blogs
                                     </h2>
-                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="/blog/?filter_author=Steve+Antonakes" class="jump-link">
+                                    <p class="short-desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                                    </p>
+                                    <a class="jump-link"
+                                       href="/blog/?filter_author=Steve+Antonakes">
                                         Blogs with the deputy director
                                     </a>
                                 </div>
@@ -122,8 +147,11 @@
                                         <span class="cf-icon cf-icon-newspaper"></span>
                                         Calendar
                                     </h2>
-                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="{{ path + 'leadership-calendar/' }}" class="jump-link">
+                                    <p class="short-desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                                    </p>
+                                    <a class="jump-link"
+                                       href="{{ path + 'leadership-calendar/' }}">
                                         View Deputy Director Antonakes' calendar
                                     </a>
                                 </div>
@@ -138,12 +166,14 @@
                             </h1>
                             <ul class="u-mb0 list list__unstyled list__links">
                                 <li class="list_item">
-                                    <a href="{{ path + 'about-rich-cordray/' }}" class="list_link jump-link">
+                                    <a class="list_link jump-link"
+                                       href="{{ path + 'about-rich-cordray/' }}">
                                         Learn about Director Richard Cordray
                                     </a>
                                 </li>
                                 <li class="list_item">
-                                    <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
+                                    <a class="list_link jump-link"
+                                       href="{{ path + 'bureau-structure/' }}">
                                         Bureau organizational structure
                                     </a>
                                 </li>
