--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -43,7 +43,9 @@
                             Director Richard Cordray
                         </h1>
                         <p class="content_desc__large">
-                            Richard Cordray serves as the first Director of the Consumer Financial Protection Bureau. He previously led the Bureau’s Enforcement Division.
+                            Richard Cordray serves as the first Director of the
+                            Consumer Financial Protection Bureau. He previously
+                            led the Bureau’s Enforcement Division.
                         </p>
                         <p>
                             <figure class="float-media rwd-crop">
@@ -66,24 +68,40 @@
                         {{ macros.share(self.title(), true) }}
                     </div>
                     
-                    <section class="content_block content_block__padded-top content_block__padded-bottom content_block__border-top u-hide-on-mobile">
+                    <section class="content_block
+                                    content_block__padded-top
+                                    content_block__padded-bottom
+                                    content_block__border-top
+                                    u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
-                                    <div class="media_image-container media_image-container__wide-margin">
+                                    <div class="media_image-container
+                                                media_image-container__wide-margin">
                                         <img src="cordray_round_90.jpg" alt="" width="60">
                                     </div>
                                     <div class="media_body">
                                         <h1 class="h4">Downloads</h1>
-                                            <a href="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_high-res.jpg" class="jump-link jump-link__download">High-res photo</a>
-                                            <a href="#" class="jump-link jump-link__download">Biography</a>
+                                        <a class="jump-link jump-link__download"
+                                           href="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_high-res.jpg">
+                                            High-res photo
+                                        </a>
+                                        <a class="jump-link jump-link__download"
+                                           href="#">
+                                            Biography
+                                        </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                <h1 class="h4">Request speaking info</h1>
+                            <div class="content-l_col
+                                        content-l_col-1-2
+                                        content-l_col__before-divider">
+                                <h1 class="h4">
+                                    Request speaking info
+                                </h1>
                                 <span class="cf-icon cf-icon-email"></span>
-                                <a class="styled-link" href="mailto:externalaffairs@cfpb.gov">
+                                <a class="styled-link"
+                                   href="mailto:externalaffairs@cfpb.gov">
                                     externalaffairs@cfpb.gov
                                 </a>
                             </div>
@@ -92,7 +110,9 @@
                     
                     <aside>
 
-                        <section class="content_block content_block__padded-top content_block__border-top">
+                        <section class="content_block
+                                        content_block__padded-top
+                                        content_block__border-top">
                             <h1 class="content_title__large">
                                 More information about Richard Cordray
                             </h1>
@@ -102,8 +122,11 @@
                                         <span class="cf-icon cf-icon-newspaper"></span>
                                         Newsroom
                                     </h2>
-                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="/newsroom/?filter_author=Richard+Cordray" class="jump-link">
+                                    <p class="short-desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                                    </p>
+                                    <a class="jump-link"
+                                       href="/newsroom/?filter_author=Richard+Cordray">
                                         Read news about the director
                                     </a>
                                 </div>
@@ -112,7 +135,9 @@
                                         <span class="cf-icon cf-icon-newspaper"></span>
                                         Blogs
                                     </h2>
-                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
+                                    <p class="short-desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                                    </p>
                                     <a href="/blog/?filter_author=Richard+Cordray" class="jump-link">
                                         Blogs with the director
                                     </a>
@@ -122,15 +147,20 @@
                                         <span class="cf-icon cf-icon-newspaper"></span>
                                         Calendar
                                     </h2>
-                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
-                                    <a href="{{ path + 'leadership-calendar/' }}" class="jump-link">
+                                    <p class="short-desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                                    </p>
+                                    <a class="jump-link"
+                                       href="{{ path + 'leadership-calendar/' }}">
                                         View Director Cordray's calendar
                                     </a>
                                 </div>
                             </div>
                         </section>
 
-                        <div class="content_block content_block__padded-top content_block__border-top">
+                        <div class="content_block
+                                    content_block__padded-top
+                                    content_block__border-top">
                             <div class="content-l content-l__large-gutters">
                                 <section class="content-l_col content-l_col-1-2">
                                     <h1 class="content_title__large">
@@ -144,11 +174,14 @@
                                     <p class="short-desc short-desc__large">
                                         View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
                                     </p>
-                                    <a href="https://www.youtube.com/user/cfpbvideo/search?query=Cordray%27s+Corner" class="jump-link jump-link__external-link">
+                                    <a class="jump-link jump-link__external-link"
+                                       href="https://www.youtube.com/user/cfpbvideo/search?query=Cordray%27s+Corner">
                                         View Cordray’s Corner videos on YouTube
                                     </a>
                                 </section>
-                                <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                                <section class="content-l_col
+                                                content-l_col-1-2
+                                                content-l_col__before-divider">
                                     <h1 class="content_title__large">
                                         CFPB history
                                     </h1>
@@ -158,7 +191,8 @@
                                     <p class="short-desc short-desc__large">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
                                     </p>
-                                    <a href="{{ path + 'history/' }}" class="jump-link jump-link__external-link">
+                                    <a class="jump-link jump-link__external-link"
+                                       href="{{ path + 'history/' }}">
                                         Learn more about our history
                                     </a>
                                 </section>
@@ -173,12 +207,14 @@
                             </h1>
                             <ul class="list list__unstyled list__links">
                                 <li class="list_item">
-                                    <a href="{{ path + 'about-steve-antonakes/' }}" class="list_link jump-link">
+                                    <a class="list_link jump-link"
+                                       href="{{ path + 'about-steve-antonakes/' }}">
                                         Learn about Deputy Director Steven Antonkes
                                     </a>
                                 </li>
                                 <li class="list_item">
-                                    <a href="{{ path + 'bureau-structure/' }}" class="list_link jump-link">
+                                    <a class="list_link jump-link"
+                                       href="{{ path + 'bureau-structure/' }}">
                                         Bureau organizational structure
                                     </a>
                                 </li>
