--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -191,7 +191,7 @@
                                     <p class="short-desc short-desc__large">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
                                     </p>
-                                    <a class="jump-link jump-link__external-link"
+                                    <a class="jump-link"
                                        href="{{ path + 'history/' }}">
                                         Learn more about our history
                                     </a>
