Margin fix to cordray bio page.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -72,7 +72,8 @@
                                     content_block__padded-top
                                     content_block__padded-bottom
                                     content_block__border-top
-                                    u-hide-on-mobile">
+                                    u-hide-on-mobile
+                                    u-mb0">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <div class="media">
