Fixes line break.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -38,8 +38,7 @@
             <div class="content_main content__flush-top-on-small">
                 <section>
 
-                    <div class="content_block
-                                content_block__flush-top">
+                    <div class="content_block content_block__flush-top">
                         <h1 class="content_title__extra-large">
                             Director Richard Cordray
                         </h1>
