Adds pdf bio to bio pages.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -91,7 +91,7 @@
                                             </li>
                                             <li class="list_item">
                                                 <a class="list_link jump-link jump-link__download"
-                                                   href="#">
+                                                   href="RichardCordray.pdf">
                                                     Biography
                                                 </a>
                                             </li>
