--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -86,7 +86,7 @@
                                             High-res photo
                                         </a>
                                         <a class="jump-link jump-link__download"
-                                           href="SteveAntonakes.pdf">
+                                           href="201410_cfpb_bio_antonakes.pdf">
                                             Biography
                                         </a>
                                     </div>
