Implement basic layout of bureau structure page. Add placeholder content for org chart and style it for larger screen sizes.

--- a/index.html
+++ b/index.html
@@ -301,6 +301,16 @@
                                         <span class="cf-icon cf-icon-external-link"></span>
                                     </a>
                                 </li>
+                                <li>
+                                    <span class="demo-file-name">
+                                        <b>the-bureau/</b>bureau-structure/
+                                    </span>
+                                    <a class="demo-sheer-link"
+                                       href="the-bureau/bureau-structure/">
+                                        view in Sheer
+                                        <span class="cf-icon cf-icon-external-link"></span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div><!-- END .padded-container -->
