Removes activities archive from the bureau nav.

--- a/the-bureau/nav.html
+++ b/the-bureau/nav.html
@@ -6,8 +6,7 @@
     (path + 'about-steve-antonakes/', 'about-steve-antonakes', 'Deputy Director Antonakes'),
     (path + 'bureau-structure/', 'bureau-structure', 'Bureau Structure'),
     (path + 'leadership-calendar/', 'leadership-calendar', 'Leadership calendar'),
-    (path + 'history/', 'history', 'History'),
-    (path + 'activities-archive/', 'activities-archive', 'Activities archive')
+    (path + 'history/', 'history', 'History')
 ] -%}
 
 {% set active_page = active_page|default('index') -%}
