--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -32,7 +32,7 @@
         <div class="wrapper content_wrapper">
 
             <aside class="content_sidebar content__flush-all-on-small">
-                {% include "nav.html" %}
+                {% include "_the-bureau-nav.html" %}
             </aside>
 
             <div class="content_main content__flush-top-on-small">
