Some new patterns and a temp table for leadership.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -139,6 +139,301 @@
                                 </div>
                             </div>
                         </form>
+
+                        <table class="u-100">
+                            <colgroup>
+                                <col class="u-25">
+                                <col class="u-25">
+                                <col class="u-50">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th colspan="3">
+                                        April 16, 2014
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Richard Cordray
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table class="u-100">
+                            <colgroup>
+                                <col class="u-25">
+                                <col class="u-25">
+                                <col class="u-50">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th colspan="3">
+                                        April 16, 2014
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        00:00 AM - 00:00 PM
+                                    </td>
+                                    <td>
+                                        <span class="h4">
+                                            Steven Antonakes
+                                        </span>
+                                    </td>
+                                    <td>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing something something something.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
                     </div><!-- END calendar -->
 
                     <!-- <section class="content_block
