Updates width utilitiy naming conventions.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -140,11 +140,11 @@
                             </div>
                         </form>
 
-                        <table class="u-100">
+                        <table class="u-w100pct">
                             <colgroup>
-                                <col class="u-25">
-                                <col class="u-25">
-                                <col class="u-50">
+                                <col class="u-w25pct">
+                                <col class="u-w25pct">
+                                <col class="u-w50pct">
                             </colgroup>
                             <thead>
                                 <tr>
@@ -287,11 +287,11 @@
                             </tbody>
                         </table>
 
-                        <table class="u-100">
+                        <table class="u-w100pct">
                             <colgroup>
-                                <col class="u-25">
-                                <col class="u-25">
-                                <col class="u-50">
+                                <col class="u-w25pct">
+                                <col class="u-w25pct">
+                                <col class="u-w50pct">
                             </colgroup>
                             <thead>
                                 <tr>
